# crewai_agents

./: README.md  app_api.py  pyproject.toml  report.md  requirements.txt
Output/Mogha/: report.md  report2.md
Output/Mogha and Base/: report.md  report1.md  report2.md  report3.md
Output/base fine tuning/: report1.md  report2.md
Output/mini4o/: report.md  report2.md  report3.md
src/legaldraft/: app_api.py  crew.py  main.py  model_api.py
src/legaldraft/config/: agents.yaml  tasks.yaml
