[project]
name = "legaldraft"
version = "0.1.0"
description = "legaldraft using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
legaldraft = "legaldraft.main:run"
run_crew = "legaldraft.main:run"
train = "legaldraft.main:train"
replay = "legaldraft.main:replay"
test = "legaldraft.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
